# MPChess

./: .gitignore  CMakeLists.txt  README.md
include/: attacks.hpp  board.hpp  defs.hpp  engine.hpp  evaluation.hpp  move.hpp  movegen.hpp  movelist.hpp  movepicker.hpp  perft.hpp  rng.hpp  search.hpp  searchinfo.hpp  threads.hpp  timemanager.hpp  tt.hpp  uci.hpp  utils.hpp  zobrist.hpp
src/: CMakeLists.txt  board.cpp  evaluation.cpp  main.cpp  move.cpp  perft.cpp  search.cpp  threads.cpp  timemanager.cpp  tt.cpp  uci.cpp  zobrist.cpp
tests/: CMakeLists.txt  perft_tests.cpp
